Fix the mailerlite form and blastoff rails text on mobile

--- a/assets/css/mailerlite.css
+++ b/assets/css/mailerlite.css
@@ -427,10 +427,11 @@
         width: 100%;
         float: left;
       }
-      .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal { width: 70%; float: left; }
-      .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-button-horizontal { width: 30%; float: left; }
+      .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal { width: 100% !important; float: left; margin-bottom: 10px; }
+      .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-button-horizontal { width: 100% !important; float: left; }
+      .ml-form-formContent.horozintalForm .ml-form-horizontalRow .horizontal-fields { width: 100% !important; }
       .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-button-horizontal.labelsOn { padding-top: 25px;  }
-      .ml-form-formContent.horozintalForm .ml-form-horizontalRow .horizontal-fields { box-sizing: border-box; float: left; padding-right: 10px;  }
+      .ml-form-formContent.horozintalForm .ml-form-horizontalRow .horizontal-fields { box-sizing: border-box; float: left; padding-right: 0px !important;  }
       #mlb2-27987994.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-horizontalRow input {
         background-color: #ffffff;
         color: #54291e;
@@ -624,3 +625,16 @@
         width: 100% !important;
       }
     }
+
+/* Force vertical layout for subscription form */
+#mlb2-27987994 .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal {
+  width: 100% !important;
+  margin-bottom: 10px !important;
+}
+#mlb2-27987994 .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-button-horizontal {
+  width: 100% !important;
+}
+#mlb2-27987994 .ml-form-formContent.horozintalForm .ml-form-horizontalRow .horizontal-fields {
+  width: 100% !important;
+  padding-right: 0px !important;
+}
